--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,10 +10,10 @@ jobs:
         name: Build Test
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/setup-node@v1
+            - uses: actions/checkout@v3
+            - uses: actions/setup-node@v3
               with:
-                  node-version: 12.x
-            - uses: actions/checkout@v2
+                  node-version: 16
             - run: npm ci
             - run: npm run build
             - name: Detect Changes
