--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,10 +10,10 @@ jobs:
         name: Unit Tests
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/setup-node@v1
+            - uses: actions/checkout@v3
+            - uses: actions/setup-node@v3
               with:
-                  node-version: 12.x
-            - uses: actions/checkout@v2
+                  node-version: 16
             - run: npm ci
             - run: npm run -- test:coverage
             - name: Coveralls
@@ -25,10 +25,10 @@ jobs:
         name: Types Tests
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/setup-node@v1
+            - uses: actions/checkout@v3
+            - uses: actions/setup-node@v3
               with:
-                  node-version: 12.x
-            - uses: actions/checkout@v2
+                  node-version: 16
             - run: npm ci
             - run: npm run -- test:ts
 
